kubernetes/apps/base/media/downloads/gluetun/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gluetun
  namespace: media
spec:
  selector:
    app: gluetun
  ports:
    - name: http
      port: 7878
      targetPort: http
