kubernetes/apps/base/media/downloads/gluetun/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gluetun-ingress
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`gluetun.theblacklodge.dev`)
      kind: Rule
      services:
        - name: gluetun
          port: 7878
